feat: add gardeners endpoint and seeder
