# app/Models/Gardeners.php
@@ -8,4 +8,11 @@ use Illuminate\Database\Eloquent\Model;
 class Gardeners extends Model
 {
     use HasFactory;
+
+  protected $fillable = [
+      'full_name',
+      'email',
+      'location_area',
+      'country_of_domicile',
+  ];
 }
